objects/Reviewer__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Record_Type__c</fullName>
        <formula>Reviewer_Workspace__r.Approval_Record_Type__c</formula>
        <label>Approval Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval__c</fullName>
        <formula>Reviewer_Workspace__r.Approval__c</formula>
        <label>Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Feedback</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_not_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Workspace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workspace</label>
        <referenceTo>Reviewer_Workspace__c</referenceTo>
        <relationshipLabel>Reviewers</relationshipLabel>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reviewers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signoff_Feedback__c</fullName>
        <label>Risk Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Very High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signoff_Type__c</fullName>
        <label>Subject Matter Expertise</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Reviewer</label>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Reviewer Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviewers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>